[package]
name = "virtio-drivers"
version = "0.7.2"
license = "MIT"
authors = [
  "Jiajie Chen <noc@jiegec.ac.cn>",
  "Runji Wang <wangrunji0408@163.com>",
  "Yuekai Jia <equation618@gmail.com>",
  "Andrew Walbran <qwandor@google.com>",
]
edition = "2018"
description = "VirtIO guest drivers."
repository = "https://github.com/rcore-os/virtio-drivers"
keywords = ["virtio"]
categories = ["hardware-support", "no-std"]

[dependencies]
fake-log = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
bitflags = "2.3.0"
zerocopy = { version = "0.7.5", features = ["derive"] }

[features]
default = ["alloc", "fake-log"]
log = ["dep:log"]
fake-log = ["dep:fake-log"]
alloc = ["zerocopy/alloc"]

[dev-dependencies]
zerocopy = { version = "0.7.5", features = ["alloc"] }
